--- a/mvc/Views/Shop/ShopList.cshtml
+++ b/mvc/Views/Shop/ShopList.cshtml
@@ -10,6 +10,6 @@
 <ul>
     @foreach (var item in @Model)
     {
-        <li>@item.ShopItems</li>
+        <li>@item.ShopItem, @item.ItemPrice $</li>
     }
 </ul>
